crates/libtest2/tests/ui/unsupported_attribute.stderr
error: unknown attribute 'unsafe(no_mangle)'
 --> tests/ui/unsupported_attribute.rs:4:1
  |
4 | #[libtest2::test]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::_private::test_parse` which comes from the expansion of the attribute macro `libtest2::test` (in Nightly builds, run with -Z macro-backtrace for more info)
